@@ -53,17 +53,16 @@
 ;; TODO: The regexp() functions and sscanf() should be able to handle '\0' as
 ;; TODO:: data byte, not as terminator.
               
-(Project-Version lpmud 3-3 622)
-(Parent-Version lpmud 3-3 621)
+(Project-Version lpmud 3-3 623)
+(Parent-Version lpmud 3-3 622)
 (Version-Log "
-  - (interpret.c) When indexing a string for assignment, the driver failed
-       to duplicate the string, leading to interesting effects if the string
-       was used as mapping key (reported by Andre).
+  - (comm.c) Fixed a memory leak when a no-bank input_to was denied (Bug
+       #0000143)
 ")
 (New-Version-Log 
 ""
 )
-(Checkin-Time "Mon, 29 Nov 2004 22:09:02 -0700")
+(Checkin-Time "Tue, 30 Nov 2004 21:16:17 -0700")
 (Checkin-Login lars)
 (Populate-Ignore ("~$" "\\.o$" "core$" "\\.emacs" "\\.a$" "\\.deps"
                   "\\.gz$" "\\.orig$" "\\.rej$" "\\.xSYM" "^driver$"
@@ -101,7 +100,7 @@
   (README (lpmud/n/0_README 1.4.1.1 644))
   (COPYRIGHT (lpmud/d/20_Copyright 1.10.1.12 644))
   (CREDITS (lpmud/d/22_CREDITS 1.70.1.83 644))
-  (CHANGELOG (lpmud/e/38_CHANGELOG. 1.157.1.685 644))
+  (CHANGELOG (lpmud/e/38_CHANGELOG. 1.157.1.686 644))
   (HISTORY (lpmud/f/49_HISTORY 1.384 644))
   (INSTALL (lpmud/d/18_INSTALL 1.11.1.20 644))
   (COPYING.LIB (lpmud/k/14_COPYING.LI 1.2 644))
@@ -171,7 +170,7 @@
   (src/call_out.c (lpmud/d/5_call_out.c 1.34.1.30 644))
   (src/closure.h (lpmud/f/44_closure.h 1.7.1.21 644))
   (src/closure.c (lpmud/d/4_closure.c 1.41.1.47.1.25 644))
-  (src/comm.c (lpmud/d/2_comm1.c 1.69.1.48.1.98 644))
+  (src/comm.c (lpmud/d/2_comm1.c 1.69.1.48.1.99 644))
   (src/comm.h (lpmud/d/3_comm.h 1.26.1.41 644))
   (src/driver.h (lpmud/f/36_driver.h 1.15.1.27 644))
   (src/dumpstat.h (lpmud/f/35_dumpstat.h 1.8 644))
