@@ -1,6 +1,10 @@
 This file lists all changes made to the game driver in all gory detail.
 See the file HISTORY for a user-oriented summary of all the changes.
 
+30-Nov-2004 (Lars Duening)  (3.3.623)
+  - (comm.c) Fixed a memory leak when a no-bank input_to was denied (Bug
+       #0000143)
+
 29-Nov-2004 (Lars Duening)  (3.3.622)
   - (interpret.c) When indexing a string for assignment, the driver failed
        to duplicate the string, leading to interesting effects if the string
